# 03-ml-modeling

./: README.md  mateusteixeiraramosdasilva_algoritmosdeiaparaclassficacao_pd.html  mateusteixeiraramosdasilva_algoritmosdeiaparaclassficacao_pd.ipynb
04_infnet_ml_engineering_pd/: README.md  dashboard.py  pyproject.toml  requirements.in  requirements.txt
04_infnet_ml_engineering_pd/0013b6d513294ddbbd17b22e84bb2e26/: meta.yaml
04_infnet_ml_engineering_pd/013e3be8b6464b30abd23f11d5d9f439/: meta.yaml
04_infnet_ml_engineering_pd/044f210d2aa34318b74d3583d159eec3/: meta.yaml
04_infnet_ml_engineering_pd/056c735870b14a3e9f572523c7bf0a2a/: meta.yaml
04_infnet_ml_engineering_pd/18e90467f17f4f0ca0a54a40c577db7d/: meta.yaml
04_infnet_ml_engineering_pd/18f215ab042d487cb31c1ccc69ecc8a7/: meta.yaml
04_infnet_ml_engineering_pd/23d8b8486f4c4edb9b921b173b5b0a1c/: meta.yaml
04_infnet_ml_engineering_pd/25b281cbeb22454fb9df7e9e1eecf361/: meta.yaml
04_infnet_ml_engineering_pd/29deb0e5c741469fbe707326fd01fab8/: meta.yaml
04_infnet_ml_engineering_pd/37f7cf1450dc4f01b931327638c5d7cd/: meta.yaml
04_infnet_ml_engineering_pd/38a8f27b46b94af8a867bdfff09524a4/: meta.yaml
04_infnet_ml_engineering_pd/39da11961862444698f7cd234eccee05/: meta.yaml
04_infnet_ml_engineering_pd/40c04b533d4345598cfe8d03f2a6037d/: meta.yaml
04_infnet_ml_engineering_pd/44cb7cacf162446b928f026656d53017/: meta.yaml
04_infnet_ml_engineering_pd/44e9b6e867d442e1be9bcff8e3abf002/: meta.yaml
04_infnet_ml_engineering_pd/53a5279dc55b441ab4053b36c6040032/: meta.yaml
(+674 files in other folders)
