[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "infnet_04_ml_engineering_pd"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.12",]

[project.scripts]
infnet-04-ml-engineering-pd = "infnet_04_ml_engineering_pd.__main__:main"

[project.optional-dependencies]
docs = [ "docutils<0.21", "sphinx>=5.3,<7.3", "sphinx_rtd_theme==2.0.0", "nbsphinx==0.8.1", "sphinx-autodoc-typehints==1.20.2", "sphinx_copybutton==0.5.2", "ipykernel>=5.3, <7.0", "Jinja2<3.2.0", "myst-parser>=1.0,<2.1",]

[tool.kedro]
package_name = "infnet_04_ml_engineering_pd"
project_name = "infnet_04_ml_engineering_pd"
kedro_init_version = "0.19.12"
tools = "['Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "infnet_04_ml_engineering_pd.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
